# os

./: Cargo.nix  Cargo.toml  LICENSE  README.md  flake.nix  result-bin
src/: helpers.rs  history.rs  main.rs  model.rs  opts.rs  os.rs  plugin.rs
src/source/: applications.rs  cliphist.rs  duckduckgo.rs  eval.rs  history.rs  hstr.rs  linkding.rs  mod.rs  run_commands.rs  search_sites.rs  stdin.rs  systemctl.rs  zoxide.rs
src/ui/: egui.rs  gtk.rs  mod.rs  ratatui.rs
