[package]
name = "os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
wayland = ["dep:gtk4-layer-shell"]

[dependencies]
toml = "0.8.11"

relm4 = "0.7.1"
gtk4-layer-shell = {version="0.2.0", optional = true}

xdg = "2.5.2"

clap = {version = "4.5.1", features = ["env", "derive", "string"]}
clap-serde-derive = "0.2.1"
serde = {version="1.0.197", features=["derive"]}
sharedlib = "7.0.0"
fuzzy-matcher = "0.3.7"
freedesktop-icon-lookup = "0.1.3"
freedesktop-desktop-entry = "0.5.1"
shlex = "1.3.0"
atty = "0.2.14"
rusqlite = "0.31.0"
chrono = "0.4.35"
nut = "0.1.3"
ahash = "0.8.11"
rayon = "1.10.0"
# Needs wl-copy
ratatui = "0.26.1"
tui-widget-list = "0.8.2"
tui-input = "0.8.0"
crossterm = "0.27.0"
ureq = {version="2.9.6", features=["json"]}
